--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,12 @@
                         </ion-label>
                     </ion-item>
                 </ion-menu-toggle>
+                <ion-item>
+                    <ion-select [(ngModel)]="language" [value]="language" (ionChange)="changeLanguage()">
+                        <ion-select-option value="ro">Română</ion-select-option>
+                        <ion-select-option value="en">English</ion-select-option>
+                    </ion-select>
+                </ion-item>
             </ion-list>
         </ion-content>
     </ion-menu>
