finished localization service

--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -3,7 +3,7 @@
         <div id='hero-content-position' class='ion-text-center ion-justify-content-center' fxLayout="column" fxLayoutAlign="center center">
             <h1 id='hero-title' [ngClass]='{"space-hero-title": !mobile}'>Academia Atlantykron</h1>
             <ion-button shape='round' class='call-to-action' [ngClass]='{"space-hero-btn": !mobile}'>
-                {{ callToActionText }}
+                {{ 'callToAction' | translate }}
                 <!-- Înscrie-te în Aventură -->
             </ion-button>
             <div id='scrim'>
