--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -105,7 +105,7 @@
                     class='navbar-button'>
                     <ion-select [(ngModel)]="language" [value]="language" (ionChange)="changeLanguage()">
                         <ion-select-option value="ro">
-                            <img alt='Romanian Flag' src='../../assets/icon/ro_flag.png'/>
+                            <!-- <img alt='Romanian Flag' src='../../assets/icon/ro_flag.png'/> -->
                             RO
                         </ion-select-option>
                         <ion-select-option value="en">EN</ion-select-option>
