--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,15 +7,15 @@
         </ion-buttons>
         <ion-grid>
             <ion-row class="ion-justify-content-center">
-                <ion-button 
+                <!-- <ion-button 
                     fill='clear' 
                     expand='full' 
                     [attr.color]="router.url == '/home' ? 'light' : 'dark'" 
-                    *ngIf='!mobile' 
+                    *ngIf='!mobile && router.url != "/home"' 
                     class='navbar-button'
                     (click)="navigateToHome()">
                     Logo
-                </ion-button>
+                </ion-button> -->
                 <ion-button 
                     fill='clear' 
                     expand='full' 
@@ -105,7 +105,6 @@
                     class='navbar-button'>
                     <ion-select [(ngModel)]="language" [value]="language" (ionChange)="changeLanguage()">
                         <ion-select-option value="ro">
-                            <!-- <img alt='Romanian Flag' src='../../assets/icon/ro_flag.png'/> -->
                             RO
                         </ion-select-option>
                         <ion-select-option value="en">EN</ion-select-option>
