--- a/src/app/single-entry/single-entry.page.html
+++ b/src/app/single-entry/single-entry.page.html
@@ -1,11 +1,13 @@
 <app-navbar></app-navbar>
 
 <ion-content>
-  <ion-grid id='material-card'>
-    <ion-row class='main-col'>
-    </ion-row>
-  </ion-grid>
+	<h1 class='single-entry-title'>Title</h1>
+	<img src='../../assets/images/0ba3d60362c7e6d256cfc1f37156bad9.jpg' class='single-entry-image'/>
+	<ion-grid id="material-card">
+		<ion-row class="main-col"> 
+			<p>Lorem Ipsum</p>
+		</ion-row>
+  	</ion-grid>
 
-
-  <app-footer></app-footer>
+  	<app-footer></app-footer>
 </ion-content>
