--- a/src/app/single-entry/single-entry.page.scss
+++ b/src/app/single-entry/single-entry.page.scss
@@ -2,6 +2,20 @@ ion-content {
     --ion-background-color: #eeeeee;
 }
 
+.single-entry-image {
+	margin: 0 auto;
+	justify-content: center;
+	max-height: 365px;
+	width: 100vw;
+	margin-top: -10px;
+}
+
+.single-entry-title {
+	position: absolute;
+	color: white;
+	margin: 0 auto;
+}
+
 #material-card {
     background-color: white;
 	border-radius: 10px;
@@ -12,7 +26,8 @@ ion-content {
 	margin: 0 auto 0 auto;
 	margin-left: auto;
 	margin-right: auto;
+	margin-top: -10px;
     right: 0;
-    padding-top: 60px;
+    // padding-top: 60px;
 	width: 90%;
 }
