single entry page image and title done

--- a/src/app/hero/hero.component.scss
+++ b/src/app/hero/hero.component.scss
@@ -37,6 +37,7 @@
     color: white;
     font-size: 60px;
     font-weight: bolder;
+background:         rgba(17, 17, 17, 0.7)       ;
 }
 
 #logo {
