--- a/src/app/single-entry/single-entry.page.html
+++ b/src/app/single-entry/single-entry.page.html
@@ -2,7 +2,9 @@
 
 <ion-content>
 	<h1 class='single-entry-title'>Title</h1>
-	<img src='../../assets/images/0ba3d60362c7e6d256cfc1f37156bad9.jpg' class='single-entry-image'/>
+	<div id='overlay'>
+		<!-- <img src='../../assets/images/0ba3d60362c7e6d256cfc1f37156bad9.jpg' class='single-entry-image'/> -->
+	</div>
 	<ion-grid id="material-card">
 		<ion-row class="main-col"> 
 			<p>Lorem Ipsum</p>
