--- a/src/app/conferences/conferences.page.html
+++ b/src/app/conferences/conferences.page.html
@@ -1,5 +1,211 @@
 <app-navbar></app-navbar>
 
 <ion-content>
+    <ion-grid id='material-card'>
+        <ion-row class='main-col'>
+                <ion-col size=2 *ngIf="!mobile && !tablet">
+                    <div class='year-selection-div'>
+                        <p class='year-selection'>Cursuri 2021</p>
+                        <p class='year-selection active'>Cursuri 2020</p>
+                        <p class='year-selection'>Cursuri 2019</p>
+                        <p class='year-selection'>Cursuri 2018</p>
+                        <p class='year-selection'>Cursuri 2017</p>
+                        <p class='year-selection'>Toate Cursurile</p>
+                    </div>
+                </ion-col>
+                <ion-col justify-content-start float-left>
+                    <ion-row *ngIf="mobile || tablet">
+                        <ion-item class="select-year central-cards">
+                            <ion-label>Selectati anul</ion-label>
+                            <ion-select>
+                                <ion-select-option value="all">Toti anii</ion-select-option>
+                                <ion-select-option value="2019">2019</ion-select-option>
+                                <ion-select-option value="2018">2018</ion-select-option>
+                            </ion-select>
+                        </ion-item>
+                    </ion-row>
+                    <h2 class='section' [ngClass]='{"section-center": mobile || tablet}'>Știință</h2>
+                    <ion-row class="card-grid" >
+                        <app-fancy-card
+                            [image]="'../../assets/images/Invitations/10_Dumitru-Dorin_Prunariu__Nov-2016_space-overall-1024x534.jpg'"
+                            [name]="'Dr. Dumitru Prunariu'" [title]="'Primul Cosmonaut Român'"
+                            class='central-cards'>
+                        </app-fancy-card>
+                        <app-fancy-card [image]="'../../assets/images/Invitations/Guy-Djoken.jpg'" [name]="'Guy Djoken'"
+                            [title]="'Președinte Centrul Pentru Pace Unesco'"
+                            class='central-cards'>
+                        </app-fancy-card>
+                        <app-fancy-card [image]="'../../assets/images/Invitations/Heather-e1561802488420.jpg'"
+                            [name]="'Heather Caton'" [title]="'Fondatoare World Genesis Foundation'"
+                            class='central-cards'>
+                        </app-fancy-card>
+                        <app-fancy-card [image]="'../../assets/images/Invitations/florin-munteanu2-e1495287157899.jpg'"
+                            [name]="'Dr. Florin Munteanu'" [title]="'Președinte Centrul de Studii Complexe'"
+                            class='central-cards'>
+                        </app-fancy-card>
+                        <app-fancy-card [image]="'../../assets/images/Invitations/Erisa-Hines-e1436522193301.png'"
+                            [name]="'Erisa Hines'" [title]="'Om de Știință NASA Jet Propulsion Laboratory'"
+                            class='central-cards'>
+                        </app-fancy-card>
+                        <app-fancy-card [image]="'../../assets/images/Invitations/maxresdefault.jpg'"
+                            [name]="'Dr. Cristian Presură'" [title]="'Autor &quot;Fizica Povestită&quot;'"
+                            class='central-cards'>
+                        </app-fancy-card>
+                        <app-fancy-card [image]="'../../assets/images/Invitations/Erisa-Hines-e1436522193301.png'"
+                            [name]="'Erisa Hines'" [title]="'Om de Știință NASA Jet Propulsion Laboratory'"
+                            class='central-cards'>
+                        </app-fancy-card>
+                        <app-fancy-card [image]="'../../assets/images/Invitations/maxresdefault.jpg'"
+                            [name]="'Dr. Cristian Presură'" [title]="'Autor &quot;Fizica Povestită&quot;'"
+                            class='central-cards'>
+                        </app-fancy-card>
+                        <app-fancy-card [image]="'../../assets/images/Invitations/Erisa-Hines-e1436522193301.png'"
+                            [name]="'Erisa Hines'" [title]="'Om de Știință NASA Jet Propulsion Laboratory'"
+                            class='central-cards'>
+                        </app-fancy-card>
+                        <app-fancy-card [image]="'../../assets/images/Invitations/maxresdefault.jpg'"
+                            [name]="'Dr. Cristian Presură'" [title]="'Autor &quot;Fizica Povestită&quot;'"
+                            class='central-cards'>
+                        </app-fancy-card>
+                    </ion-row>
 
+                    <h2 class='section' [ngClass]='{"section-center": mobile || tablet}'>Artă</h2>
+                    <ion-row class="card-grid" >
+                        <app-fancy-card
+                            [image]="'../../assets/images/Invitations/10_Dumitru-Dorin_Prunariu__Nov-2016_space-overall-1024x534.jpg'"
+                            [name]="'Dr. Dumitru Prunariu'" [title]="'Primul Cosmonaut Român'"
+                            class='central-cards'>
+                        </app-fancy-card>
+                        <app-fancy-card [image]="'../../assets/images/Invitations/Guy-Djoken.jpg'" [name]="'Guy Djoken'"
+                            [title]="'Președinte Centrul Pentru Pace Unesco'"
+                            class='central-cards'>
+                        </app-fancy-card>
+                        <app-fancy-card [image]="'../../assets/images/Invitations/Heather-e1561802488420.jpg'"
+                            [name]="'Heather Caton'" [title]="'Fondatoare World Genesis Foundation'"
+                            class='central-cards'>
+                        </app-fancy-card>
+                        <app-fancy-card [image]="'../../assets/images/Invitations/florin-munteanu2-e1495287157899.jpg'"
+                            [name]="'Dr. Florin Munteanu'" [title]="'Președinte Centrul de Studii Complexe'"
+                            class='central-cards'>
+                        </app-fancy-card>
+                        <app-fancy-card [image]="'../../assets/images/Invitations/Erisa-Hines-e1436522193301.png'"
+                            [name]="'Erisa Hines'" [title]="'Om de Știință NASA Jet Propulsion Laboratory'"
+                            class='central-cards'>
+                        </app-fancy-card>
+                        <app-fancy-card [image]="'../../assets/images/Invitations/maxresdefault.jpg'"
+                            [name]="'Dr. Cristian Presură'" [title]="'Autor &quot;Fizica Povestită&quot;'"
+                            class='central-cards'>
+                        </app-fancy-card>
+                        <app-fancy-card [image]="'../../assets/images/Invitations/Erisa-Hines-e1436522193301.png'"
+                            [name]="'Erisa Hines'" [title]="'Om de Știință NASA Jet Propulsion Laboratory'"
+                            class='central-cards'>
+                        </app-fancy-card>
+                        <app-fancy-card [image]="'../../assets/images/Invitations/maxresdefault.jpg'"
+                            [name]="'Dr. Cristian Presură'" [title]="'Autor &quot;Fizica Povestită&quot;'"
+                            class='central-cards'>
+                        </app-fancy-card>
+                        <app-fancy-card [image]="'../../assets/images/Invitations/Erisa-Hines-e1436522193301.png'"
+                            [name]="'Erisa Hines'" [title]="'Om de Știință NASA Jet Propulsion Laboratory'"
+                            class='central-cards'>
+                        </app-fancy-card>
+                        <app-fancy-card [image]="'../../assets/images/Invitations/maxresdefault.jpg'"
+                            [name]="'Dr. Cristian Presură'" [title]="'Autor &quot;Fizica Povestită&quot;'"
+                            class='central-cards'>
+                        </app-fancy-card>
+                    </ion-row>                    
+    
+                    <h2 class='section' [ngClass]='{"section-center": mobile || tablet}'>Cultură</h2>
+                    <ion-row class="card-grid" >
+                        <app-fancy-card
+                            [image]="'../../assets/images/Invitations/10_Dumitru-Dorin_Prunariu__Nov-2016_space-overall-1024x534.jpg'"
+                            [name]="'Dr. Dumitru Prunariu'" [title]="'Primul Cosmonaut Român'"
+                            class='central-cards'>
+                        </app-fancy-card>
+                        <app-fancy-card [image]="'../../assets/images/Invitations/Guy-Djoken.jpg'" [name]="'Guy Djoken'"
+                            [title]="'Președinte Centrul Pentru Pace Unesco'"
+                            class='central-cards'>
+                        </app-fancy-card>
+                        <app-fancy-card [image]="'../../assets/images/Invitations/Heather-e1561802488420.jpg'"
+                            [name]="'Heather Caton'" [title]="'Fondatoare World Genesis Foundation'"
+                            class='central-cards'>
+                        </app-fancy-card>
+                        <app-fancy-card [image]="'../../assets/images/Invitations/florin-munteanu2-e1495287157899.jpg'"
+                            [name]="'Dr. Florin Munteanu'" [title]="'Președinte Centrul de Studii Complexe'"
+                            class='central-cards'>
+                        </app-fancy-card>
+                        <app-fancy-card [image]="'../../assets/images/Invitations/Erisa-Hines-e1436522193301.png'"
+                            [name]="'Erisa Hines'" [title]="'Om de Știință NASA Jet Propulsion Laboratory'"
+                            class='central-cards'>
+                        </app-fancy-card>
+                        <app-fancy-card [image]="'../../assets/images/Invitations/maxresdefault.jpg'"
+                            [name]="'Dr. Cristian Presură'" [title]="'Autor &quot;Fizica Povestită&quot;'"
+                            class='central-cards'>
+                        </app-fancy-card>
+                        <app-fancy-card [image]="'../../assets/images/Invitations/Erisa-Hines-e1436522193301.png'"
+                            [name]="'Erisa Hines'" [title]="'Om de Știință NASA Jet Propulsion Laboratory'"
+                            class='central-cards'>
+                        </app-fancy-card>
+                        <app-fancy-card [image]="'../../assets/images/Invitations/maxresdefault.jpg'"
+                            [name]="'Dr. Cristian Presură'" [title]="'Autor &quot;Fizica Povestită&quot;'"
+                            class='central-cards'>
+                        </app-fancy-card>
+                        <app-fancy-card [image]="'../../assets/images/Invitations/Erisa-Hines-e1436522193301.png'"
+                            [name]="'Erisa Hines'" [title]="'Om de Știință NASA Jet Propulsion Laboratory'"
+                            class='central-cards'>
+                        </app-fancy-card>
+                        <app-fancy-card [image]="'../../assets/images/Invitations/maxresdefault.jpg'"
+                            [name]="'Dr. Cristian Presură'" [title]="'Autor &quot;Fizica Povestită&quot;'"
+                            class='central-cards'>
+                        </app-fancy-card>
+                    </ion-row>    
+                    <h2 class='section' [ngClass]='{"section-center": mobile || tablet}'>Sport</h2>
+                    <ion-row class="card-grid" >
+                        <app-fancy-card
+                            [image]="'../../assets/images/Invitations/10_Dumitru-Dorin_Prunariu__Nov-2016_space-overall-1024x534.jpg'"
+                            [name]="'Dr. Dumitru Prunariu'" [title]="'Primul Cosmonaut Român'"
+                            class='central-cards'>
+                        </app-fancy-card>
+                        <app-fancy-card [image]="'../../assets/images/Invitations/Guy-Djoken.jpg'" [name]="'Guy Djoken'"
+                            [title]="'Președinte Centrul Pentru Pace Unesco'"
+                            class='central-cards'>
+                        </app-fancy-card>
+                        <app-fancy-card [image]="'../../assets/images/Invitations/Heather-e1561802488420.jpg'"
+                            [name]="'Heather Caton'" [title]="'Fondatoare World Genesis Foundation'"
+                            class='central-cards'>
+                        </app-fancy-card>
+                        <app-fancy-card [image]="'../../assets/images/Invitations/florin-munteanu2-e1495287157899.jpg'"
+                            [name]="'Dr. Florin Munteanu'" [title]="'Președinte Centrul de Studii Complexe'"
+                            class='central-cards'>
+                        </app-fancy-card>
+                        <app-fancy-card [image]="'../../assets/images/Invitations/Erisa-Hines-e1436522193301.png'"
+                            [name]="'Erisa Hines'" [title]="'Om de Știință NASA Jet Propulsion Laboratory'"
+                            class='central-cards'>
+                        </app-fancy-card>
+                        <app-fancy-card [image]="'../../assets/images/Invitations/maxresdefault.jpg'"
+                            [name]="'Dr. Cristian Presură'" [title]="'Autor &quot;Fizica Povestită&quot;'"
+                            class='central-cards'>
+                        </app-fancy-card>
+                        <app-fancy-card [image]="'../../assets/images/Invitations/Erisa-Hines-e1436522193301.png'"
+                            [name]="'Erisa Hines'" [title]="'Om de Știință NASA Jet Propulsion Laboratory'"
+                            class='central-cards'>
+                        </app-fancy-card>
+                        <app-fancy-card [image]="'../../assets/images/Invitations/maxresdefault.jpg'"
+                            [name]="'Dr. Cristian Presură'" [title]="'Autor &quot;Fizica Povestită&quot;'"
+                            class='central-cards'>
+                        </app-fancy-card>
+                        <app-fancy-card [image]="'../../assets/images/Invitations/Erisa-Hines-e1436522193301.png'"
+                            [name]="'Erisa Hines'" [title]="'Om de Știință NASA Jet Propulsion Laboratory'"
+                            class='central-cards'>
+                        </app-fancy-card>
+                        <app-fancy-card [image]="'../../assets/images/Invitations/maxresdefault.jpg'"
+                            [name]="'Dr. Cristian Presură'" [title]="'Autor &quot;Fizica Povestită&quot;'"
+                            class='central-cards'>
+                        </app-fancy-card>
+                    </ion-row>                    
+                </ion-col>
+        </ion-row>
+    </ion-grid>
+
+
+    <app-footer></app-footer>
 </ion-content>
