--- a/src/app/contact/contact.page.scss
+++ b/src/app/contact/contact.page.scss
@@ -15,6 +15,14 @@ ion-content {
     --ion-background-color: #eeeeee;
 }
 
+.error-msg {
+    color: red;
+}
+
+.success-msg {
+    color: limegreen;
+}
+
 .login-button {
     --border-color: var(--ion-color-secondary);
     --border-radius: 30px;
