--- a/src/app/single-entry/single-entry.page.html
+++ b/src/app/single-entry/single-entry.page.html
@@ -3,20 +3,16 @@
 <ion-content>
 
   <div id='hero-container'  class='overlay-navbar'>
-    <h1 class="single-entry-title">{{title}}</h1>
-
+    <h1 class="single-entry-title">{{data.roTitle}}</h1>
   </div>
-
 
   <ion-grid id='material-card'>
     <ion-row class='main-col'>
-      <p>{{description}}</p>
-
-
+      <!-- <p>{{data.description}}</p> -->
     </ion-row>
 
     <ion-row justify-content-center>
-      <app-fancy-card
+      <!-- <app-fancy-card
         [image]="'../../assets/images/Invitations/10_Dumitru-Dorin_Prunariu__Nov-2016_space-overall-1024x534.jpg'"
         [name]="'Dr. Dumitru Prunariu'" [title]="'Primul Cosmonaut Român'"
         >
@@ -30,10 +26,10 @@
         [image]="'../../assets/images/Invitations/10_Dumitru-Dorin_Prunariu__Nov-2016_space-overall-1024x534.jpg'"
         [name]="'Dr. Dumitru Prunariu'" [title]="'Primul Cosmonaut Român'"
         >
-      </app-fancy-card>
+      </app-fancy-card> -->
     </ion-row>
   </ion-grid>
 
-
   <app-footer></app-footer>
+
 </ion-content>
