wired up categorised display pages

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -73,9 +73,9 @@
                     [attr.color]="router.url == '/home' ? 'light' : 'dark'" 
                     *ngIf='!mobile' 
                     class='navbar-button'
-                    (click)="navigateToSponsors()"
-                    [ngClass]='{"active": router.url == "/sponsors"}'>
-                    Sponsori
+                    (click)="navigateToPartners()"
+                    [ngClass]='{"active": router.url == "/partners"}'>
+                    Parteneri
                 </ion-button>
                 <ion-button 
                     fill='clear' 
