--- a/src/app/sponsors-showcase/sponsors-showcase.component.html
+++ b/src/app/sponsors-showcase/sponsors-showcase.component.html
@@ -1,4 +1,4 @@
-<h2 class='section-title'>Sponsori Oficiali</h2>
+<h2 class='section-title'>Parteneri Oficiali</h2>
 <div class='row'>
     <div class='col vertical-align-content'>
         <img src='../../assets/images/Sponsors/3G-Sport.png' class='sponsor-image' alt='3G-Sport'>
