--- a/src/app/participate/participate.page.html
+++ b/src/app/participate/participate.page.html
@@ -3,7 +3,35 @@
 <ion-content>
     <ion-grid id='material-card'>
         <ion-row class='main-col'>
-            <ion-col justify-content-start float-left>            
+            <ion-col justify-content-start float-left> 
+                <ion-row *ngIf="menuBreakpoint">
+                    <ion-item class="select-year central-cards">
+                        <ion-label>Selectați Pasul</ion-label>
+                        <ion-select (ionChange)="segmentChanged($event.target.value)" [(ngModel)]="step">
+                            <ion-select-option *ngFor="let stepOption of ['login', 'guide', 'rules', 'enrollForm', 'otherParticipants']"
+                                value="{{stepOption}}">{{stepDisplay[stepOption]}}</ion-select-option>
+                        </ion-select>
+                    </ion-item>
+                </ion-row>
+                <ion-segment (ionChange)="segmentChanged($event.detail.value)" *ngIf="!menuBreakpoint" [(ngModel)]="step">
+                    <ion-segment-button value="login">
+                      <ion-label>{{stepDisplay.login}}</ion-label>
+                    </ion-segment-button>
+                    <ion-segment-button value="guide">
+                      <ion-label>{{stepDisplay.guide}}</ion-label>
+                    </ion-segment-button>
+                    <ion-segment-button value="rules">
+                        <ion-label>{{stepDisplay.rules}}</ion-label>
+                      </ion-segment-button>
+                      <ion-segment-button value="enrollForm">
+                        <ion-label>{{stepDisplay.enrollForm}}</ion-label>
+                      </ion-segment-button>
+                      <ion-segment-button value="otherParticipants">
+                        <ion-label>{{stepDisplay.otherParticipants}}</ion-label>
+                      </ion-segment-button>
+                </ion-segment>
+
+
             </ion-col>
         </ion-row>
     </ion-grid>
