--- a/src/app/participate/participate.page.scss
+++ b/src/app/participate/participate.page.scss
@@ -46,6 +46,13 @@ ion-content {
     margin-left: 0px;
 }
 
-.select-year {
+.select-step {
     width: 500px;
+}
+
+.participate-content {
+    padding: 20px;
+    margin: 20px;
+    width: 100%;
+    justify-content: center;
 }
