rules segment image css improvements

--- a/src/app/participate/segment-rules/segment-rules.component.html
+++ b/src/app/participate/segment-rules/segment-rules.component.html
@@ -1,11 +1,15 @@
 <div class="participate-content">
-  <img class="rules-image" src="../../../assets/illustrations/rules.svg"/>
-  <p>
+
+  <img class="rules-image" src="../../../assets/illustrations/rules.svg" alt='rules illustration'/>
+
+  <p class="wrap-image">
     Academia de vară Atlantykron dorește să ofere participanților o experiență unică pe întreaga durată a evenimentului. O frumoasă armonizare cu mediul natural, cursuri și ateliere în aer liber susținute de profesioniști care excelează în domeniile lor.
   </p>
-  <p>
+
+  <p class="wrap-image">
     Pentru ca aceste lucruri să fie posibile, este nevoie ca toți participanții  să respecte un set minimal de reguli, atât pentru păstrarea unei atmosfere plăcute, cât și pentru desfășurarea în siguranță a activităților întreprinse. De aceea, pentru participarea la Academie, toți participanții se obligă:
   </p>
+
   <ul>
     <li>
       <p>
