--- a/src/app/participate/segment-rules/segment-rules.component.scss
+++ b/src/app/participate/segment-rules/segment-rules.component.scss
@@ -6,8 +6,12 @@
     color: red;
 }
 
+.wrap-image {
+    text-align: justify;
+}
+
 .rules-image {
-    margin: 0 auto;
-    width: 100%;
     max-height: 295px;
+    padding: 40px;
+    float: left;
 }
