finished login segment

--- a/src/app/participate/segment-guide/segment-guide.component.html
+++ b/src/app/participate/segment-guide/segment-guide.component.html
@@ -17,7 +17,8 @@
       <p class="image-caption push-bottom"><b>Barca de la capidava</b></p>
 
       <img class="segment-image push-bottom" src="../../../assets/images/Guide/guide-5.jpeg" alt="Cantina Taberei"/>
-      <img class="segment-image push-bottom" src="../../../assets/images/Guide/guide-6.jpeg" alt="Poza Participanti"/>
+      <p class="image-caption"><b>Cantina Atlantykron</b></p>
+
     </ion-col>
 
     <ion-col class="segment-main-content">
@@ -29,7 +30,7 @@
 
       <h1>CINE POATE PARTICIPA?</h1>
       <p>Academia este recomandată tinerilor cu vârsta între 16 și 29 de ani. Persoanele mai tinere de 16 ani pot participa doar însoțite de un adult. Adultul insotitor isi asuma intreaga responsabilitatea atat pentru comportamentul pe insula, cat si pentru pastrarea in siguranta a persoanei sub 16 ani. Persoanele cu vârsta de peste 29 de ani pot participa asumându-și faptul că programul este construit pentru tineri și că tot cadrul în care se desfășoară Academia este unul natural, condițiile fiind unele de camping.</p>
-      <p>Oricine este interesat să participe trebuie să se înregistreze online pe adresa <a href='www.atlantykron.org/home' class="attention"> www.atlantykron.org</a> folosind un profil de Facebook, Google sau o combinatie Email Parola. Inscrierea este finalizata doar dupa receptionarea emailului de acceptare.  Persoanele care nu pot prezenta un email valid de acceptare nu sunt acceptate in procedura de inregistrare a Academiei.</p>
+      <p>Oricine este interesat să participe trebuie să se înregistreze online pe adresa <a href='www.atlantykron.org/home' class="link"> www.atlantykron.org</a> folosind un profil de Facebook, Google sau o combinatie Email Parola. Inscrierea este finalizata doar dupa receptionarea emailului de acceptare.  Persoanele care nu pot prezenta un email valid de acceptare nu sunt acceptate in procedura de inregistrare a Academiei.</p>
 
       <h1>SECURITATEA INSULEI</h1>
       <p>Asigurarea unei perioade sigure şi relaxante este prioritatea principală a coordonatorilor Academiei. Caracteristic este faptul că, pe lângă paznicii devotaţi de pe insulă, Poliţia de Frontieră este în permanenţă prezentă pe insulă. În plus, fiecare instructor, lider de echipă şi coordonator de programe supraveghează toate activităţile, sprijinind echipele de securitate.</p>
