--- a/src/app/participate/segment-login/segment-login.component.html
+++ b/src/app/participate/segment-login/segment-login.component.html
@@ -1,3 +1,6 @@
-<p>
-  segment-login works!
-</p>
+<div class="participate-content">
+
+  <p>Asigură-te că ai un cont și ești logat pe site.</p>
+  <p>Te poți loga/înregistra <span class="link" (click)="navigateToLogin()">aici.</span></p>
+
+</div>
