--- a/src/app/guide/guide.component.html
+++ b/src/app/guide/guide.component.html
@@ -1,7 +1,7 @@
 <ion-grid>
 	<ion-row>
 		<ion-row>
-			<img src='../../assets/illustrations/Guide Illustration.svg' alt='Guide Illustration' class='guide-img'
+			<img src='../../assets/illustrations/Guide_Illustration.svg' alt='Guide Illustration' class='guide-img'
 			[ngClass]="{'no-margin': mobile || tablet, 'smaller-img': !mobile}">
 			<ion-col class='section-col'>
 				<h2 class="section-title">O zi tipică într-o tabără atipică</h2>
