--- a/src/app/participate/segment-rules/segment-rules.component.html
+++ b/src/app/participate/segment-rules/segment-rules.component.html
@@ -77,7 +77,7 @@
       </p>
     </li>
   </ul>
-  <h8>*Nerespectarea atrage după sine notificarea autorităților și măsurile care se impun confor legii.</h8>
+  <p>*Nerespectarea atrage după sine notificarea autorităților și măsurile care se impun confor legii.</p>
   <p class="attention">
     Organizatorii își rezervă dreptul de a exclude din cadrul Academiei orice persoană, fără a oferi explicații. Setul de reguli anterior este unul minimal.  
   </p>
