--- a/src/app/presentation/presentation.component.html
+++ b/src/app/presentation/presentation.component.html
@@ -5,7 +5,7 @@
 <ion-grid>
 	<ion-row class='presentation-illustration-container'>
 		<ion-col class='illustration-column'>
-			<img src="../../assets/illustrations/Science Illustration.svg" 
+			<img src="../../assets/illustrations/Science_Illustration.svg" 
 				class='presentation-illustration'
 				alt="Science Illustration"/>
 			<div class='illustration-content-container'>
@@ -17,7 +17,7 @@
 			</div>
 		</ion-col>
 		<ion-col class='illustration-column'>
-			<img src="../../assets/illustrations/Art Illustration.svg" 
+			<img src="../../assets/illustrations/Art_Illustration.svg" 
 				class='presentation-illustration illustration-bump-down'
 				alt="Art Illustration"/>
 				<div class='illustration-content-container'>
@@ -29,7 +29,7 @@
 				</div>
 		</ion-col>
 		<ion-col class='illustration-column'>
-			<img src="../../assets/illustrations/Culture Illustration.svg" 
+			<img src="../../assets/illustrations/Culture_Illustration.svg" 
 				class='presentation-illustration'
 				alt="Culture Illustration"/>
 				<div class='illustration-content-container'>
@@ -41,7 +41,7 @@
 				</div>
 		</ion-col>
 		<ion-col class='illustration-column'>
-			<img src="../../assets/illustrations/Sport Illustration.svg" 
+			<img src="../../assets/illustrations/Sport_Illustration.svg" 
 				class='presentation-illustration illustration-bump-down'
 				alt="Sport Illustration"/>
 				<div class='illustration-content-container'>
