fixed hosting, linked up buttons on homepage, added emoji language picker flags

--- a/src/app/guide/guide.component.html
+++ b/src/app/guide/guide.component.html
@@ -6,10 +6,10 @@
 			<ion-col class='section-col'>
 				<h2 class="section-title">O zi tipică într-o tabără atipică</h2>
 				<p class='section-text'>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et</p>
-				<ion-button fill='outline' class='section-button'>Află Mai Multe
+				<ion-button fill='outline' class='section-button' (click)="navigateToParticipate()">Află Mai Multe
 				</ion-button>
 				<p class='section-text'>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et</p>
-				<ion-button fill='outline' class='section-button'>Ghid Participare
+				<ion-button fill='outline' class='section-button' (click)="navigateToParticipate()">Ghid Participare
 				</ion-button>
 			</ion-col>
 		</ion-row>
