--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -125,9 +125,11 @@
                     class='navbar-button'>
                     <ion-select [(ngModel)]="language" [value]="language" (ionChange)="changeLanguage()">
                         <ion-select-option value="ro">
-                            RO
+                            🇷🇴 RO
                         </ion-select-option>
-                        <ion-select-option value="en">EN</ion-select-option>
+                        <ion-select-option value="en">
+                            🇺🇸 EN
+                        </ion-select-option>
                     </ion-select>
                 </ion-button>
             </ion-row>
