--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -3,9 +3,8 @@
         <div id='hero-content-position' class='ion-text-center ion-justify-content-center' fxLayout="column" fxLayoutAlign="center center">
             <!-- <h1 id='hero-title' [ngClass]='{"space-hero-title": !mobile}'>Academia Atlantykron</h1> -->
             <img src='../../assets/logo/logo_white_atlantykron.svg' alt='Atlantykron Logo' id='logo'/>
-            <ion-button shape='round' class='call-to-action' [ngClass]='{"space-hero-btn": !mobile}'>
+            <ion-button shape='round' class='call-to-action' [ngClass]='{"space-hero-btn": !mobile}' (click)="navigateToParticipate()">
                 {{ 'callToAction' | translate }}
-                <!-- Înscrie-te în Aventură -->
             </ion-button>
             <div id='scrim'>
                 <h2 class='hero-subheader' *ngIf='!mobile' [ngClass]='{"space-hero-subt": !mobile}'>Ediția 34</h2>
